@@ -3,6 +3,9 @@ Changes in Version 0.9-1
   o Added raschtree() function, based on simple RaschModel()
     (for binary 0/1 items).
 
+  o Some bug fixes (subsets with missing drop = FALSE) for paircomp()
+    and bttree() with only two objects
+    
 
 Changes in Version 0.9-0
 
